--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,7 +13,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="img/pic.png">
-        <p>Hi, this message is from {{name}}</p>
+        <p>This website is supported by darksky.net & mapbox.com</p>
     </div>
     {{>footer}}
 </body>
